[gd_scene load_steps=7 format=3 uid="uid://c7ycb57houxl1"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m12p3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7nubc"]

[sub_resource type="PrismMesh" id="PrismMesh_u4gd0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uiem3"]

[sub_resource type="SphereMesh" id="SphereMesh_2o1p4"]
radius = 0.25
height = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_2e1ws"]
size = Vector3(2, 5, 2)

[node name="Player" type="CharacterBody3D" groups=["player"]]
floor_constant_speed = true
floor_max_angle = 1.22173
script = ExtResource("1_m12p3")

[node name="PlayerModel" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7nubc")

[node name="Arrow" type="MeshInstance3D" parent="PlayerModel"]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 0, 0, 1)
mesh = SubResource("PrismMesh_u4gd0")
skeleton = NodePath("../..")

[node name="HoldPoint" type="Marker3D" parent="PlayerModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_uiem3")

[node name="CentralCameraPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0.4, 0)
top_level = true

[node name="Camera3D" type="Camera3D" parent="CentralCameraPoint"]
transform = Transform3D(1, 0, 0, 0, 0.390731, 0.920505, 0, -0.920505, 0.390731, 0, 24, 11)
doppler_tracking = 2
fov = 60.0
size = 39.544

[node name="Cursor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
gizmo_extents = 3.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cursor"]
mesh = SubResource("SphereMesh_2o1p4")

[node name="Area3D" type="Area3D" parent="Cursor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cursor/Area3D"]
shape = SubResource("BoxShape3D_2e1ws")
