[gd_scene load_steps=4 format=3 uid="uid://c7ycb57houxl1"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_m12p3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7nubc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uiem3"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_m12p3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7nubc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_uiem3")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.817788, 0.575519, 0, -0.575519, 0.817788, 0, 8.73146, 12.6245)
fov = 50.0
